--- a/vignettes/vpc-obs-quant-blq-cens.Rmd
+++ b/vignettes/vpc-obs-quant-blq-cens.Rmd
@@ -31,7 +31,7 @@ library(mrgsolve, warn.conflicts =  FALSE)
 library(withr, warn.conflicts =  FALSE)
 ```
 
-# Exploratory Data Analysis
+# Analysis Dataset
 
 Next let's explore our input dataset `data_sad`. This dataset was generated via simulation from the mrgsolve `model` internal to the pmxhelpr package. We can take a quick look at the dataset using `glimpse()` from the `dplyr`.
 
@@ -39,7 +39,7 @@ Next let's explore our input dataset `data_sad`. This dataset was generated via 
 glimpse(data_sad)
 ```
 
-Let's visualize the data. For this visualization, we will leverage the functionality of `plot_dvtime` to visualize our data. First, we will derive a factor variable from DOSE to pass to the color aesthetic. 
+Let's visualize the data. For this visualization, we will leverage the functionality of `plot_dvtime`. First, we will derive a factor variable from `"DOSE"` to pass to the color aesthetic. 
 
 ```{r data-plotdata}
 plot_data <- data_sad %>% 
@@ -89,18 +89,19 @@ ggplot(aes(x = TIME, y = ODV), data = plot_data100)+
                aes(x = NTIME, y = DV, col = "DV (>0.5LLOQ)"), inherit.aes = FALSE) +
   geom_hline(yintercept = unique(plot_data$LLOQ), linetype = "dashed")+
   scale_x_continuous(breaks = seq(0,168,24))+
-  scale_y_log10()+
+  scale_y_log10(guide = "axis_logticks")+
   scale_color_manual(name = "Data Handling", 
                      breaks = c("DV (>LLOQ)", "DV (>0.5LLOQ)"), 
                      values = c("DV (>LLOQ)" = "#440154FF", "DV (>0.5LLOQ)" = "#21908CFF"))+
   facet_wrap(~PART)+
   labs(y = "Concentration (ng/mL)", x = "Time Since Dose Administration (hours)")+
-  theme_bw()
+  theme_bw() +
+  theme(panel.grid.minor.y = element_blank())
 ```
 
-We can see in these plots that the central tendency of the late terminal phase is influenced by censoring at the LLOQ. This leads to visual artifact, which may sometimes appear like another log-linear slope. The exact pattern of impact will depend on the dose intensity, the assay sensitivity, and the study sampling scheme.
+We can see in these plots that the central tendency of the late terminal phase is influenced by censoring at the LLOQ. This leads to visual artifact, which may sometimes appear like another log-linear slope. The exact pattern of impact will depend on the dose intensity, the assay sensitivity, and the study sampling schema.
 
-The relative impact of the unobserved portion of the distribution of concentration can be further visualized as histograms facetted by nominal sampling time. These distributions are pooled across both Part 1-SAD and Part 2-FE for the 100 mg in these histograms.
+The relative impact of the unobserved portion of the distribution of concentration can be further visualized as histograms faceted by nominal sampling time. These distributions are pooled across both Part 1-SAD and Part 2-FE for the 100 mg in these histograms.
 
 ```{r plot-hist-conc-blq, fig.height=4, fig.width=9, message=FALSE, warning=FALSE}
 ggplot(aes(x = DV), data = filter(plot_data100, NTIME %in% seq(24,144,24), DOSE == 100))+
@@ -133,13 +134,14 @@ ggplot(aes(x = NTIME, y = `Fraction BLQ`, col = `Dose (mg)`), data = plot_data_s
 
 ```
 
-In summary, the observed patters of BLQ data were in the example dataset are anticipated for an early phase clinical study. 
+In summary, the observed patters of BLQ data were in the example dataset are anticipated for an early phase clinical study.
+
   - increasing frequency of BLQ data with increasing time
   - decreasing frequency of BLQ data with increasing dose 
 
-BLQ data are often ignored (i.e., set as missing; M1 method) in population PK model development. This is unlikely to introduce appreciable bias in model parameter estimation, provided the absolute frequency of BLQ data is low (e.g., <10-20%) and the pattern of BLQ censoring is in line with the expectations by dose and in time.  
+BLQ data are often ignored (i.e., set as missing; M1 method) in population PK model development. This is unlikely to introduce appreciable bias in model parameter estimation, provided the absolute frequency of BLQ data is low (e.g., <10-20%) and the pattern of BLQ censoring is in line with the expectations by dose and time.  
 
-However, just as BLQ censoring introduced some artifact to the explortory plots of concentration over time, the handling of BLQ data in VPCs may impact the interpretation of these graphical model diagnostics.
+However, just as BLQ censoring introduced some artifact to the exploratory plots of concentration over time, the handling of BLQ data in VPCs may impact the interpretation of these graphical model diagnostics.
 
 # VPC Plots Accounting for BLQ Censoring
 
@@ -167,7 +169,7 @@ sim100 <- simout %>%
 There are two potential approaches proccessing and plotting the VPC:
 
   1. `Exclude BLQ`: remove missing observations (`MDV=1`) in both the observed and simulated data
-  2. `Censor Observed Quantiles`: set quantiles of the observed data `NA`, if the sample representing that quantile of the observed is BLQ (`MDV=1`) in the bin.
+  2. `Censor Observed Quantiles`: set quantiles of the observed data to `NA`, if the sample representing that quantile of the observed is BLQ (`MDV=1`) in the bin.
 
 Let's plot using the default arguments to `plot_vpc_exactbins()`. The default behavior is `Exclude BLQ`, which filters out `MDV=1`.
 
@@ -186,7 +188,7 @@ vpc_blq_drop <- plot_vpc_exactbins(
 
 vpc_blq_drop
 ```
-The observed median appears consistent with the exploratory concentration-time profiles generated earlier excluding data below the lower limit of quantification (`ODV`). Notice that the increasing trend in the observed quantiles at later timelines coincides with completely overlapping simulated confidence intervals for all quantiles. This is due to the decreasing sample size with time due to exclusion of timeplints where `MDV=1`.
+The observed median appears consistent with the exploratory concentration-time profiles generated earlier excluding data below the lower limit of quantification (i.e., plotting `"ODV"`). Notice that the increasing trend in the observed quantiles at later timelines coincides with completely overlapping simulated confidence intervals for all quantiles. This is due to the decreasing sample size with time due to exclusion of timepoints where `MDV=1`.
 
 Let's instead try specifying a new argument `loq` to `plot_vpc_exactbins()`. 
 
@@ -208,12 +210,12 @@ vpc_blq_qobs_cens
 ```
 Now we see a red horizontal line depicting the LLOQ (1 ng/mL). Notice also the increase in the y-axis range, the change in the shape of the observed quantiles, and the greater resolution in separation between the confidence intervals. 
 
-Specifying `loq` assumes that in the input dataset for the plot, `sim`, `MDV=1` represents *only* BLQ samples (e.g., `EVID = 0`). The `MDV` variable in `sim` is set to zero (0) so that all timepoints are included. 
+Specifying `loq` assumes that `MDV=1` represents *only* BLQ samples in the input dataset for the plot (`sim`) when `EVID=0`. The function sets the `MDV` variable in `sim` to zero (0) so that all timepoints are included. 
 
   - In the calculation of the summary statistics of the observed data, the quantiles are calculated across all data per bin and taken as `NA` when that quantile of observations is below `loq`. 
   - In the calcluation of summary statistics of the simulated data, the simulated confidence intervals are based on all data without any censoring, which is representative of the model-predicted "true" underlying PK profile in the absence of real-world assay limitations.
   
-Specifying `loq` is the preferred method for plotting VPC diagnostics with the `pmexhelpr` package.This is not the default method due to the all-too-common case where the assay LLOQ is not known to the analyst. Additionally, this method of accounting for the censoring of data below the LLOQ by specifying the `loq` argument should only be applied to Visual Predictive Checks (`pcvpc = FALSE`) and should *not* be applied to Prediction-corrected Visual Predictive Checks (`pcvpc = TRUE`). 
+Specifying `loq` is the preferred method for plotting VPC diagnostics with the `pmxhelpr` package. This is not the default method due to the all-too-common case where the assay LLOQ is not known to the analyst. Additionally, this method of accounting for the censoring of data below the LLOQ by specifying the `loq` argument should only be applied to Visual Predictive Checks (`pcvpc = FALSE`) and should *not* be applied to Prediction-corrected Visual Predictive Checks (`pcvpc = TRUE`). 
 
 If`loq` is specified with`pcvpc = TRUE`, an error message will print from `vpc::vpc()`.
 
